@@ -452,12 +452,7 @@ FfmpegCheckTag(DecoderClient &client, InputStream *is,
 static bool
 IsSeekable(const AVFormatContext &format_context) noexcept
 {
-#if LIBAVFORMAT_VERSION_INT >= AV_VERSION_INT(58, 6, 100)
 	return (format_context.ctx_flags & AVFMTCTX_UNSEEKABLE) == 0;
-#else
-	(void)format_context;
-	return false;
-#endif
 }
 
 static void
@@ -660,8 +655,6 @@ ffmpeg_scan_stream(InputStream &is, TagHandler &handler)
 	return FfmpegScanStream(*f, handler);
 }
 
-#if LIBAVFORMAT_VERSION_INT >= AV_VERSION_INT(58, 9, 100)
-
 static void
 ffmpeg_uri_decode(DecoderClient &client, const char *uri)
 {
@@ -696,8 +689,6 @@ ffmpeg_protocols() noexcept
 
 	return protocols;
 }
-
-#endif
 
 /**
  * A list of extensions found for the formats supported by ffmpeg.
@@ -822,8 +813,6 @@ static const char *const ffmpeg_mime_types[] = {
 constexpr DecoderPlugin ffmpeg_decoder_plugin =
 	DecoderPlugin("ffmpeg", ffmpeg_decode, ffmpeg_scan_stream)
 	.WithInit(ffmpeg_init, ffmpeg_finish)
-#if LIBAVFORMAT_VERSION_INT >= AV_VERSION_INT(58, 9, 100)
 	.WithProtocols(ffmpeg_protocols, ffmpeg_uri_decode)
-#endif
 	.WithSuffixes(ffmpeg_suffixes)
 	.WithMimeTypes(ffmpeg_mime_types);
