@@ -8,16 +8,11 @@
 #include "LogCallback.hxx"
 
 extern "C" {
-#include <libavformat/avformat.h>
+#include <libavutil/log.h>
 }
 
 void
 FfmpegInit()
 {
 	av_log_set_callback(FfmpegLogCallback);
-
-#if LIBAVFORMAT_VERSION_INT < AV_VERSION_INT(58, 9, 100)
-	/* deprecated as of FFmpeg 4.0 */
-	av_register_all();
-#endif
 }
